@@ -1,3 +1,9 @@
+2012-04-20  Ian Lance Taylor  <iant@google.com>
+
+	* lang.opt: Add -fgo-check-divide-zero and
+	-fgo-check-divide-overflow.
+	* gccgo.texi (Invoking gccgo): Document new options.
+
 2012-03-22  Release Manager
 
 	* GCC 4.7.0 released.
